@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.810 2008-12-22 00:10:59 martin Exp $
+# $Id: CHANGES,v 1.811 2008-12-28 23:15:35 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/12/28) Added deamon support to bin/PostMasterMailbox.pl and
+    bin/GenericAgent.pl by using "-b <BACKGROUND_INTERVAL_IN_MIN>".
  - (2008/12/22) Improved ticket escalation notification, moved to .dtl support
     (Kernel/Output/HTML/Standard/AgentTicketEscalation.dtl) and added ticket
     title as mouse on over note.
@@ -53,6 +55,8 @@
     user, customer and queue preferences. Can be extended by config settings.
  - (2008/10/02) Improved package manager to get info about documentation
     availabe in online repository packages.
+ - (2008/10/02) Added password reset option based on auth backend for multi
+    auth support.
 
 2.3.4 (2008/??/??)
  - (2008/12/08) Fixed bug# 3462 - SMIME crypt and sign functions bail out -
